fix: adjust box-sizing and overflow properties in reset styles

--- a/src/assets/styles/3-generic/_reset.scss
+++ b/src/assets/styles/3-generic/_reset.scss
@@ -5,5 +5,11 @@
 *,
 *::before,
 *::after {
-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+    box-sizing: border-box;
 }
